# A2Geant4

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  README.txt  TOF.par.save
cbsim/: Alterations.17.03.11  cb_mamic.C  cbsasha.C  crystalball.C  materials.inc  prism.F  ugeom.F  ugeom_mamic_apr09.F  ugeom_sasha.F  ugeom_solid_target.F  ugeom_taps.F  ugeom_target.F
cmake/: FindPluto.cmake  FindROOT.cmake
data/: TOF.par.ex
include/: A2CBOutput.hh  A2CryoTarget.hh  A2DetCherenkov.hh  A2DetCrystalBall.hh  A2DetMWPC.hh  A2DetPID.hh  A2DetPID3.hh  A2DetPizza.hh  A2DetTOF.hh  A2DetectorConstruction.hh  A2DetectorMessenger.hh  A2EventAction.hh  A2EventActionMessenger.hh  A2FileGenerator.hh  A2FileGeneratorGiBUU.hh  A2FileGeneratorMkin.hh  A2FileGeneratorPluto.hh  A2FileGeneratorTree.hh  A2Hit.hh  A2PhysicsList.hh  A2PhysicsListMessenger.hh  A2PhysicsList_10.hh  A2PhysicsList_10_3.hh  A2PhysicsList_10_5.hh  A2PrimaryGeneratorAction.hh  A2PrimaryGeneratorMessenger.hh  A2SD.hh  A2SolidTargetGeneric.hh  A2Target.hh  A2TrackingAction.hh  A2UserTrackInformation.hh  A2Utils.hh  A2Version.hh  MCNtuple.h
macros/: DetectorSetup.mac  DetectorSetup_Apr_09.mac  DetectorSetup_Dec_07.mac  DetectorSetup_Feb_09.mac  DetectorSetup_Feb_14.mac  DetectorSetup_Jul_13.mac  DetectorSetup_Mar_13.mac  DetectorSetup_Mar_17.mac  DetectorSetup_May_09_MWPC.mac  DetectorSetup_Nov_08.mac  DetectorSetup_Nov_08_MWPC.mac  DetectorSetup_Oct_16.mac  GiBUU.mac  PlutoCocktail.mac  debug.mac  interactive.mac  kaon_debug.mac  neutron.mac  single_part.mac  vis.mac  vis_orig.mac  vis_pizza.mac  vis_tunnel.mac
macros/templates/: 10T_1_3_6_7_9_10_12_13_15_16  1T_1  2T_2_3  2T_2_4  2T_5_6  3T_1_3_4  3T_2_3_4  3T_2_4_5  3T_3_5_6  4T_1_2_4_5  4T_1_3_4_5  4T_1_3_5_6  4T_1_5_6_8  4T_2_4_5_6  4T_2_4_5_7  4T_2_4_6_7  4T_3_4_6_7  4T_4_7_9_10  5T_1_3_4_6_7  5T_1_3_5_6_7  5T_1_3_5_7_8  5T_1_4_5_7_8  5T_2_3_4_6_7  5T_2_4_5_7_8  5T_2_5_6_7_8  5T_2_5_6_8_9  5T_3_4_7_8_9  5T_3_5_6_8_9  6T_1_3_5_6_7_8  6T_1_3_5_6_8_9  6T_1_3_6_7_8_9  6T_1_5_6_7_9_10  6T_3_4_6_7_9_10  7T_2_4_5_7_8_10_11  7T_2_5_6_8_9_11_12  8T_1_2_5_6_8_9_11_12  8T_1_3_5_6_8_9_11_12  8T_1_3_6_7_9_10_12_13  8T_1_4_6_7_10_11_13_14  8T_1_5_6_8_9_12_13_14  (+48 more)
src/: A2.cc  A2CBOutput.cc  A2CBSD.cc  A2CryoTarget.cc  A2DetCherenkov.cc  A2DetCrystalBall.cc  A2DetCrystalBall.cc.flc  A2DetCrystalBall.cc.real  A2DetCrystalBall.cc.save  A2DetMWPC.cc  A2DetMWPC.cc.jamie  A2DetPID.cc  A2DetPID3.cc  A2DetPizza.cc  A2DetTAPS.cc  A2DetTOF.cc  A2DetectorConstruction.cc  A2DetectorConstruction.cc.save  A2DetectorMessenger.cc  A2EventAction.cc  A2EventActionMessenger.cc  A2FileGenerator.cc  A2FileGeneratorGiBUU.cc  A2FileGeneratorMkin.cc  A2FileGeneratorPluto.cc  A2FileGeneratorTree.cc  A2Hit.cc  A2MagneticField.cc  A2PhysicsList.cc  A2PhysicsList.cc.4.9.2  A2PhysicsListMessenger.cc  A2PhysicsListMessenger.cc.4.9.2  A2PhysicsList_10.cc  A2PhysicsList_10_3.cc  A2PhysicsList_10_5.cc  A2PolarizedTarget.cc  A2PrimaryGeneratorAction.cc  A2PrimaryGeneratorMessenger.cc  A2SD.cc  A2SolidTarget.cc  (+10 more)
